<resources>
    <string name="app_name">Moonraker Remote</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">{Name}</string>
    <string name="nav_header_subtitle">{IP}</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_webcam">Webcam</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_printer_menu">Printers</string>

    <string name="settings_connection_title">Connection Settings</string>
    <string name="settings_connection_name">Name</string>
    <string name="settings_connection_ip">Websocket URL</string>
    <string name="settings_connection_save_url">Save URL</string>
    <string name="settings_connection_rename">Rename Printer</string>
    <string name="settings_connection_delete">Remove Printer</string>
    <string name="settings_connection_stream_url">Cam Stream URL</string>

    <string name="printer_settings_title">Connection Settings</string>
    <string name="printer_settings_name">Name</string>
    <string name="printer_settings_websocket_url">Websocket URL</string>
    <string name="printer_settings_stream_url">Cam Stream URL</string>
    <string name="printer_settings_fluidd">Fluidd</string>
    <string name="printer_settings_auto_discover">Search</string>
    <string name="printer_settings_discovery_error">Error!</string>
    <string name="printer_settings_discovery_save">Saved current URL`s!</string>
    <string name="printer_settings_discovery_next">Next</string>
    <string name="printer_settings_mainsail">Mainsail</string>
    <string name="printer_settings_save_url">Save URL</string>
    <string name="printer_settings_rename">Rename Printer</string>
    <string name="printer_settings_delete">Remove Printer</string>

    <string name="printer_menu_title">Select Printer</string>
</resources>