<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="de.eliteschw31n.moonrakerremote.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_webcam"
        android:name="de.eliteschw31n.moonrakerremote.ui.webcam.WebcamFragment"
        android:label="@string/menu_webcam"
        tools:layout="@layout/fragment_webcam" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="de.eliteschw31n.moonrakerremote.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_printer_settings"
        android:name="de.eliteschw31n.moonrakerremote.ui.printer_settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_printer_settings" />

    <fragment
        android:id="@+id/nav_printer_menu"
        android:name="de.eliteschw31n.moonrakerremote.ui.printer_menu.PrinterMenuFragment"
        android:label="@string/menu_printer_menu"
        tools:layout="@layout/fragment_printer_menu" />

    <fragment
        android:id="@+id/component_printer_select"
        android:name="de.eliteschw31n.moonrakerremote.ui.components.PrinterSelect"
        tools:layout="@layout/component_printer_select" />

</navigation>