<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/printer_settings_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.printer_settings.SettingsFragment">

    <TextView
        android:id="@+id/printer_settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/printer_settings_title"
        android:textAlignment="textStart"
        android:textColor="@color/teal_500"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_printer_settings_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/printer_settings_name"
        app:endIconContentDescription="@string/printer_settings_rename"
        app:endIconDrawable="@drawable/ic_settings_save"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/printer_settings_title"
        app:startIconContentDescription="@string/printer_settings_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_printer_settings_websocket"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/printer_settings_websocket_url"
        app:endIconContentDescription="@string/printer_settings_save_url"
        app:endIconDrawable="@drawable/ic_settings_save"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_printer_settings_name"
        app:startIconContentDescription="@string/printer_settings_websocket_url">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_printer_settings_stream_url"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/printer_settings_stream_url"
        app:endIconContentDescription="@string/printer_settings_save_url"
        app:endIconDrawable="@drawable/ic_settings_save"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_printer_settings_websocket"
        app:startIconContentDescription="@string/printer_settings_stream_url">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/printer_settings_delete_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/printer_settings_delete"
        android:textColor="@color/white"
        app:backgroundTint="@color/red_800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/printer_settings_discovery_save_text" />

    <Button
        android:id="@+id/printer_settings_auto_discover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_settings_autodiscovery"
        android:drawableTint="@android:color/white"
        android:text="@string/printer_settings_auto_discover"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_printer_settings_stream_url" />

    <ProgressBar
        android:id="@+id/printer_settings_discovery_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/printer_settings_auto_discover"
        app:layout_constraintTop_toBottomOf="@+id/input_printer_settings_stream_url" />

    <TextView
        android:id="@+id/printer_settings_discovery_error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:text="@string/printer_settings_discovery_error"
        android:textColor="@color/red_800"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/printer_settings_auto_discover"
        app:layout_constraintTop_toBottomOf="@+id/input_printer_settings_stream_url" />

    <Button
        android:id="@+id/printer_settings_discovery_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/printer_settings_discovery_next"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/printer_settings_auto_discover"
        app:layout_constraintTop_toBottomOf="@+id/input_printer_settings_stream_url" />

    <TextView
        android:id="@+id/printer_settings_discovery_save_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/printer_settings_discovery_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/printer_settings_auto_discover" />

</androidx.constraintlayout.widget.ConstraintLayout>